fixed spacing issues?

--- a/css/header.css
+++ b/css/header.css
@@ -16,21 +16,18 @@ html {
 
 }
 
-@media (max-width : 500px) {
+@media (max-width : 360px) {
     html {
         font-size: .75em;
 
-        margin-top: -4em;
+        margin-top: -3em;
         
     }
 }
 
 @media (max-width : 500px) {
     html {
-        font-size: .9em;
-
-        margin-top: -2em;
-        
+        font-size: .9em;        
     }
 }
 
